// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`change value action should return CHANGE_VALUE with payload 1`] = `
Object {
  "payload": Object {
    "path": "fake path",
  },
  "type": "CHANGE_VALUE",
}
`;

exports[`change value action should return CHANGE_VALUE with payload 2`] = `
Object {
  "payload": Object {
    "topic": "fakeTopic",
  },
  "type": "CHANGE_VALUE",
}
`;
